# file-access-helper

./: CMakeLists.txt  README.md  file-access-helper-libConfig.cmake.in
.github/workflows/: buildAndTest.yml
src/: fileaccesshelper.cpp  fileaccesshelper.h
tests/: CMakeLists.txt
tests/gtest/: unittest-fileaccesshelper.cpp
